code/human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_12.wast
(assert_invalid
  (module
    (type $sig (func))
    (func (loop (type $sig) (i32.const 0)))
  )
  "type mismatch"
)